Started on preset component

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-        <main id="root" class="container"></main>
+        <main id="root"></main>
         <script src="main.js"></script>
     </body>
 </html>
